adding Customer Register
